# yggoxide

./: .gitignore  Cargo.toml  OpenAPI.json  PROFILE.md  README.md
examples/: mock_server.rs  spoof_server.rs  todo_server.rs
profile/: README.md
src/: lib.rs  main.rs  prelude.rs
src/api/: auth.rs  mod.rs  services.rs  session.rs
src/api/auth/: authenticate.rs  index.rs  invalidate.rs  refresh.rs  signout.rs  validate.rs
src/api/services/: attributes.rs  certificates.rs
src/api/session/: has_joined.rs  join.rs  profile.rs
src/impl/: default.rs  deref.rs  into.rs  mod.rs  rocket.rs
src/structs/: common.rs  error.rs  mod.rs  services.rs  session.rs  yggdrasil.rs
src/traits/: auth.rs  mod.rs  services.rs  session.rs
