[package]
name = "yggoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde
serde_json = "1.0.81"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde = { version = "1.0.137", features = [ "derive" ] }

# Rocket
rocket = { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
rocket_empty = { git = "https://github.com/insertish/rocket_empty", branch = "master" }

# Schemas
rocket_okapi = { git = "https://github.com/insertish/okapi", rev = "a1048d0c8cd771e424ec97d33d825c32e06aa120", features = [ "swagger" ] }
okapi = { git = "https://github.com/insertish/okapi", rev = "a1048d0c8cd771e424ec97d33d825c32e06aa120" }
schemars = { version = "0.8.8" }

[dev-dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
dashmap = "5.3.4"
nanoid = "0.4.0"
